--- a/index.html
+++ b/index.html
@@ -41,22 +41,22 @@
       </form>
       <section>
         <figure>
-          <img src="/img/sobre-planta.png" alt="Imagem com uma planta mais próxima e mostrando detalhes">
+          <img src="./img/sobre-planta.png" alt="Imagem com uma planta mais próxima e mostrando detalhes">
         </figure>
         <div class="detalhe">
           <h2>Como conseguir</h2>
           <h4>minha planta</h4>
           <ul>
             <li>
-              <img src="/assets/elipse-amarelo.svg" alt="icone da lista">
+              <img src="./assets/elipse-amarelo.svg" alt="icone da lista">
               Escolha suas plantas
             </li>
             <li>
-              <img src="/assets/elipse-amarelo.svg" alt="icone da lista">
+              <img src="./assets/elipse-amarelo.svg" alt="icone da lista">
               Faça seu pedido
             </li>
             <li>
-              <img src="/assets/elipse-amarelo.svg" alt="icone da lista">
+              <img src="./assets/elipse-amarelo.svg" alt="icone da lista">
               Aguarde na sua casa
             </li>
           </ul>
@@ -71,13 +71,13 @@
 
         <div class="product">
 
-          <img src="/img/produto-01.png" alt="Foto de planta Ajuga reptans" class="produtcphoto">
+          <img src="./img/produto-01.png" alt="Foto de planta Ajuga reptans" class="produtcphoto">
           <div class="infoproduct">
             <h4>Ajuga reptans</h4>
             <p class="productprice">R$ 20,00</p>
             <a href="">
               <button>Comprar</button>
-              <img src="/assets/seta.svg" alt="Imagem em amarelo inficando comprar o produto">
+              <img src="./assets/seta.svg" alt="Imagem em amarelo inficando comprar o produto">
             </a>
           </div>
 
@@ -85,13 +85,13 @@
 
         <div class="product">
 
-          <img src="/img/produto-02.png" alt="Foto de planta Cordyline fruticosa" class="produtcphoto">
+          <img src="./img/produto-02.png" alt="Foto de planta Cordyline fruticosa" class="produtcphoto">
           <div class="infoproduct">
             <h4>Cordyline fruticosa</h4>
             <p class="productprice">R$ 20,00</p>
             <a href="">
               <button>Comprar</button>
-              <img src="/assets/seta.svg" alt="Imagem em amarelo inficando comprar o produto">
+              <img src="./assets/seta.svg" alt="Imagem em amarelo inficando comprar o produto">
             </a>
           </div>
 
@@ -99,13 +99,13 @@
 
         <div class="product">
 
-          <img src="/img/produto-03.png" alt="Foto de planta Crassula ovata" class="produtcphoto">
+          <img src="./img/produto-03.png" alt="Foto de planta Crassula ovata" class="produtcphoto">
           <div class="infoproduct">
             <h4>Crassula ovata</h4>
             <p class="productprice">R$ 20,00</p>
             <a href="">
               <button>Comprar</button>
-              <img src="/assets/seta.svg" alt="Imagem em amarelo inficando comprar o produto">
+              <img src="./assets/seta.svg" alt="Imagem em amarelo inficando comprar o produto">
             </a>
           </div>
 
@@ -113,20 +113,20 @@
 
         <div class="product">
 
-          <img src="/img/produto-04.png" alt="Foto de planta Cyperus rotundus" class="produtcphoto">
+          <img src="./img/produto-04.png" alt="Foto de planta Cyperus rotundus" class="produtcphoto">
           <div class="infoproduct">
             <h4>Cyperus rotundus</h4>
             <p class="productprice">R$ 20,00</p>
             <a href="">
               <button>Comprar</button>
-              <img src="/assets/seta.svg" alt="Imagem em amarelo inficando comprar o produto">
+              <img src="./assets/seta.svg" alt="Imagem em amarelo inficando comprar o produto">
             </a>
           </div>
 
         </div>
 
         <div class="product">
-          <img src="/img/produto-05.png" alt="Foto de planta Delairea odorata" class="produtcphoto">
+          <img src="./img/produto-05.png" alt="Foto de planta Delairea odorata" class="produtcphoto">
           <div class="infoproduct">
             <h4>Delairea odorata</h4>
             <p class="productprice">R$ 20,00</p>
@@ -140,13 +140,13 @@
 
         <div class="product">
 
-          <img src="/img/produto-06.png" alt="Foto de planta Datura metel" class="produtcphoto">
+          <img src="./img/produto-06.png" alt="Foto de planta Datura metel" class="produtcphoto">
           <div class="infoproduct">
             <h4>Datura metel</h4>
             <p class="productprice">R$ 20,00</p>
             <a href="">
               <button>Comprar</button>
-              <img src="/assets/seta.svg" alt="Imagem em amarelo inficando comprar o produto">
+              <img src="./assets/seta.svg" alt="Imagem em amarelo inficando comprar o produto">
             </a>
           </div>
 
