--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="/assets/icon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="./assets/icon.png" type="image/x-icon">
   <title>Casa Verde</title>
   <!-- Fonts Google -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +17,7 @@
 <body>
   <header>
     <div class="menu">
-      <img src="/assets/logo.svg" alt="">
+      <img src="./assets/logo.svg" alt="">
       <nav>
         <ul>
           <li><a href="#">Como Fazer</a></li>
@@ -132,7 +132,7 @@
             <p class="productprice">R$ 20,00</p>
             <a href="">
               <button>Comprar</button>
-              <img src="/assets/seta.svg" alt="Imagem em amarelo inficando comprar o produto">
+              <img src="./assets/seta.svg" alt="Imagem em amarelo inficando comprar o produto">
             </a>
           </div>
 
