--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <h3>melhores plantas</h3>
       <p>Encontre aqui uma vasta seleção de plantas para decorar a sua casa e torná-lo uma pessoa mais feliz no seu dia a dia. Entre com seu e-mail e assine nossa newsletter para saber das novidades da marca.</p>
       <form action="#" class="newsletter">
-          <img src="/assets/mail.svg" alt="Icone para email de newsletter">
+          <img src="./assets/mail.svg" alt="Icone para email de newsletter">
           <input type="email" name="email" id="email" placeholder="Insira seu e-mail">
           <button type="submit">Assinar newsletter</button>
       </form>
