--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <nav>
         <ul>
           <li><a href="#">Como Fazer</a></li>
-          <li><a href="#">Ofertas</a></li>
+          <li><a href="#produtos">Ofertas</a></li>
           <li><a href="#">Depoimentos</a></li>
           <li><a href="#">Videos</a></li>
           <li><a href="#">Carrinho</a></li>
@@ -64,10 +64,10 @@
       </section>
     </article>
 
-    <article class="ofertas">
+    <article class="ofertas" id="produtos">
       <p>Conheça nossos</p>
       <h3>ofertas</h3>
-      <div class="catalog">
+      <div class="catalog" >
 
         <div class="product">
 
@@ -158,6 +158,7 @@
 
     
   </main>
+
 
 </body>
 </html>
