--- a/index.html
+++ b/index.html
@@ -159,6 +159,8 @@
     
   </main>
 
+  <a href="https://www.figma.com/file/oIvbPVheU0vyOOs6LZXH42/Designe-For-HTML%2FCSS?node-id=0%3A1" target="_blank">Link Figma</a><br>
+  <a href="./templates.zip">Link arquivos</a>
 
 </body>
 </html>
