--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           <li><a href="#">Depoimentos</a></li>
           <li><a href="#">Videos</a></li>
           <li><a href="#">Carrinho</a></li>
+          <li><a href="https://forms.gle/A7twPAVnFCsqezP8A" target="_blanck" >Prova N2</a></li>
         </ul>
       </nav>
     </div>
